# build-metadata

./: Cargo.toml  README.md
examples/commit-test/: Cargo.toml
examples/commit-test/src/: main.rs
src/: lib.rs
